SonarCloud errors fix